--- a/src/styles.css
+++ b/src/styles.css
@@ -51,6 +51,10 @@ main {
 }
 
 .current-weather {
+  display: none
+}
+
+.current-weather-display{
   display: flex;
   justify-content: space-between;
 }
